# authenticator

./: .editorconfig  .gitignore  .prettierignore  LICENSE.md  README.md  nx.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind-global-preset.js  tsconfig.base.json  workspace.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml.example  test-action.yml.example
apps/desktop/: .env.example  .eslintrc.json  index.html  jest.config.ts  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite-env.d.ts  vite.config.ts
apps/desktop/src/: App.spec.ts  App.spec.tsx  App.tsx  main.ts  main.tsx  mocks.ts
apps/desktop/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: 1024.icns
apps/desktop/src-tauri/src/: main.rs  menu.rs  otp_generator.rs  security.rs  sys_utils.rs
apps/desktop/src/app/: app.spec.ts
apps/desktop/src/components/: AppLogo.tsx  AppMenu.tsx  AuthScreen.tsx  ConfirmDialog.tsx  DialogTransition.tsx  EmptyState.tsx  ErrorScreen.tsx  ExitButton.tsx  FormCreate.tsx  FormUpdate.tsx  ItemSingle.tsx  ItemsList.tsx  LoaderScreen.tsx  LoadingIndicator.tsx  LockScreen.tsx  MainScreen.tsx  MenuDivider.tsx  OfflineScreen.tsx  ProgressBar.tsx  RefreshButton.tsx  SearchBar.tsx  TitleBar.tsx  ToastMessage.tsx
apps/desktop/src/hooks/: useAuth.ts  useGetCollections.ts  useLoadCollections.ts  useNotification.ts
apps/desktop/src/screens/: AuthScreen.tsx  ErrorScreen.tsx  LockScreen.tsx  MainScreen.tsx  OfflineScreen.tsx
apps/desktop/src/stores/: stores.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/utils/: array-helpers.ts  guards.ts  import-export.ts  lyra-search.ts  queries.ts  storage.ts  string-helpers.ts  supabase.ts  ui-helpers.ts
libs/otentik-db/: .eslintrc.json  jest.config.ts  project.json  tsconfig.lib.json
libs/otentik-db/src/: create-local-snapshot.ts  create-production-snapshot.ts  index.ts  restore-snapshot.ts
libs/otentik-db/src/lib/: otentik-db.spec.ts  otentik-db.ts
libs/otentik-db/supabase/: clear-db.sql  config.toml.example
libs/otentik-db/supabase/migrations/: 20220816204614_profiles.sql  20220816204626_vaults.sql  20220830184018_devices.sql
