[package]
name = "otentik-authenticator"
version = "0.6.0"
description = "Open Source two factor authenticator"
authors = ["Aris Ripandi <aris@duck.com>"]
license = "Apache-2.0"
repository = "https://github.com/otentikapp/clients"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
libreauth = { version = "^0.15", features = ["key", "oath", "pass"] }
binascii = { version = "^0.1", features = ["encode", "decode"] }
cocoa = "0.24"
magic-crypt = "^3.1"
bcrypt = "^0.13"
easy-hasher = "^2.2"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "otentik-authenticator"
path = "src/main.rs"

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
